--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-server.port=9999
+server.port=8080
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/resources/,classpath:/static/,classpath:/templates/
