--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/myzoom?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: 341282
+    password: ******
   jpa:
     hibernate:
       ddl-auto: update
